--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ fieldset, img {
     font-weight: bold; }
   #content1 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content1 .photo {
@@ -148,7 +148,7 @@ fieldset, img {
     font-weight: bold; }
   #content11 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content11 .row {
@@ -205,7 +205,7 @@ fieldset, img {
     font-weight: bold; }
   #content12 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content12 .instaimg img {
@@ -238,7 +238,7 @@ fieldset, img {
     font-weight: bold; }
   #content21 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content21 .photo {
@@ -264,7 +264,7 @@ fieldset, img {
     font-weight: bold; }
   #content22 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content22 .photo {
@@ -290,7 +290,7 @@ fieldset, img {
     font-weight: bold; }
   #content23 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content23 .photo {
@@ -325,7 +325,7 @@ fieldset, img {
     font-weight: bold; }
   #content24 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content24 .photo {
@@ -343,7 +343,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 95vh; }
+  height: 100vh; }
   #content3 #titulo {
     position: absolute;
     top: 9vh;
@@ -352,7 +352,7 @@ fieldset, img {
     font-weight: bold; }
   #content3 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content3 .photo {
@@ -380,7 +380,7 @@ fieldset, img {
     font-weight: bold; }
   #content4 .arti {
     position: relative;
-    font-size: 18px;
+    font-size: 2vh;
     color: black;
     top: 25vh; }
   #content4 .arti2 {
@@ -458,7 +458,7 @@ footer {
     #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
       padding-left: 1.35rem;
       padding-right: 1.35rem;
-      font-size: 17px; }
+      font-size: 12vh; }
   #logo {
     height: 23px; }
   .pl-5 {
