--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 9vh;
     color: black;
-    font-size: 7vh;
+    font-size: 60px;
     font-weight: bold;
   }
   .arti {
@@ -71,7 +71,7 @@ fieldset, img {
     background-size: cover;
   }
   .title {
-    width: 30vw;
+    width: 450px;
     position: absolute;
     right: -80vh;
     bottom: 14vh;
@@ -83,7 +83,7 @@ fieldset, img {
   }
 
   .subtitle {
-    width: 20vw;
+    width: 420px;
     font-size: 1.5vw;
     position: absolute;
      bottom: 10vh;
@@ -109,14 +109,14 @@ fieldset, img {
 
   @media (max-width: 991.98px) {
     .title {
-      width: 32vw;
+      width: 300px;
       bottom: 22vh;
 
     }
     .subtitle {
-      font-size: 2vw;
+      font-size: 18px;
       width: 300px;
-
+      bottom: 17vh;
     }
   }
 
@@ -127,8 +127,8 @@ fieldset, img {
     }
     .subtitle {
       width: 300px;
-      font-size: 20px;
-      bottom: 16vh;
+      font-size: 16px;
+      bottom: 17vh;
     }
   }
 }
@@ -381,17 +381,12 @@ footer {
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
-  #content0 {
-    .subtitle {
-      bottom: 15vh;
-    }
-  }
   #content1, #content21, #content22, #content23, #content24, #content3 {
       height: 105vh;
       .arti {
         padding-left: 1.35rem;
         padding-right: 1.35rem;
-        font-size: 12vh;
+        font-size: 16px;
       }
   }
   #logo {
@@ -443,7 +438,7 @@ footer {
     }
   }
   #content1 {
-    height: 170vh;
+    height: 135vh;
   }
   #content11 {
     .row {
@@ -477,11 +472,11 @@ footer {
 @media (max-width: 575.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
     .arti {
-      font-size: 15px;
+      font-size: 14px;
     }
   }
   #content1 {
-    height: 155vh;
+    height: 780px;
   }
   #content22 {
     height: 115vh;
