--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -32,7 +32,7 @@
 }
 
 #logo {
-  height: 28px;
+  height: 27px;
 }
 
 #texto {
@@ -84,7 +84,7 @@ fieldset, img {
 
   .subtitle {
     width: 420px;
-    font-size: 1.5vw;
+    font-size: 20px;
     position: absolute;
      bottom: 10vh;
      right: -80vh;
@@ -389,9 +389,6 @@ footer {
         font-size: 16px;
       }
   }
-  #logo {
-    height: 23px;
-  }
   .pl-5 {
     padding-left: 0rem;
   }
@@ -470,6 +467,9 @@ footer {
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
+  #logo {
+    height: 25px;
+  }
   #content1, #content21, #content22, #content23, #content24, #content3 {
     .arti {
       font-size: 14px;
