--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -290,7 +290,7 @@ fieldset, img {
     background: url("../images/marcos-1.jpg") no-repeat top center;
       position: relative;
       overflow: hidden;
-      top: 21vh;
+      top: 160px;
       height: 400px;
       background-size: cover;
   }
@@ -303,7 +303,7 @@ fieldset, img {
     background: url("../images/espejos.jpg") no-repeat center center;
       position: relative;
       overflow: hidden;
-      top: 21vh;
+      top: 160px;
       height: 400px;
       background-size: cover;
   }
@@ -319,7 +319,7 @@ fieldset, img {
     background: url("../images/escaparate-2.jpg") no-repeat center center;
       position: relative;
       overflow: hidden;
-      top: 21vh;
+      top: 160px;
       height: 50vh;
       background-size: cover;
   }
@@ -346,7 +346,7 @@ fieldset, img {
     margin: 0 auto;
       position: relative;
       overflow: hidden;
-      top: 21vh;
+      top: 160px;
       height: 50vh;
       background-size: cover;
   }
@@ -362,7 +362,7 @@ fieldset, img {
     background: url("../images/servicios-1.jpg") no-repeat bottom center;
       position: relative;
       overflow: hidden;
-      top: 21vh;
+      top: 160px;
       height: 55vh;
       background-size: cover;
   }
