--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ fieldset, img {
     background: url("../images/marcos-1.jpg") no-repeat top center;
     position: relative;
     overflow: hidden;
-    top: 21vh;
+    top: 160px;
     height: 400px;
     background-size: cover; }
 
@@ -329,7 +329,7 @@ fieldset, img {
     background: url("../images/espejos.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
-    top: 21vh;
+    top: 160px;
     height: 400px;
     background-size: cover; }
   @media (max-width: 991.98px) {
@@ -358,7 +358,7 @@ fieldset, img {
     background: url("../images/escaparate-2.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
-    top: 21vh;
+    top: 160px;
     height: 50vh;
     background-size: cover; }
 
@@ -394,7 +394,7 @@ fieldset, img {
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    top: 21vh;
+    top: 160px;
     height: 50vh;
     background-size: cover; }
   @media (max-width: 991.98px) {
@@ -423,7 +423,7 @@ fieldset, img {
     background: url("../images/servicios-1.jpg") no-repeat bottom center;
     position: relative;
     overflow: hidden;
-    top: 21vh;
+    top: 160px;
     height: 55vh;
     background-size: cover; }
   @media (max-width: 991.98px) {
