--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -210,16 +210,12 @@ fieldset, img {
 
 #content11 {
   @include sections;
-  #titulo {
-    top: 4vh;
-  }
   .row {
       display: -ms-flexbox; /* IE10 */
       display: flex;
       -ms-flex-wrap: wrap; /* IE10 */
       flex-wrap: wrap;
-      padding: 0 4px;
-      padding-top: 200px;
+      padding-top: 160px;
   }
 
   /* Create four equal columns that sits next to each other */
@@ -228,7 +224,9 @@ fieldset, img {
       flex: 25%;
       max-width: 25%;
       padding: 0 4px;
+      text-align: center;
       img {
+        width: 95%;
         margin-top: 8px;
         margin-bottom: 8px;
         vertical-align: middle;
@@ -250,6 +248,9 @@ fieldset, img {
           flex: 50%;
           max-width: 50%;
       }
+      img {
+        width: 80% !important;
+      }
   }
 
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -258,6 +259,9 @@ fieldset, img {
           -ms-flex: 100%;
           flex: 100%;
           max-width: 100%;
+      }
+      img {
+        width: 70% !important;
       }
   }
 
@@ -428,7 +432,6 @@ fieldset, img {
   @media screen and (max-width: 800px) {
     padding-left: 8px;
       .row {
-        padding-top: 100px;
         height: 1100px;
         font-size: 15px;
       }
@@ -516,9 +519,7 @@ footer {
     }
   }
   #content11 {
-    .row {
-      padding-top: 100px;
-    }
+
   }
   #content12 {
     .container-fluid {
