--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,6 @@ fieldset, img {
     font-size: 18px;
     color: black;
     top: 200px; }
-  #content11 #titulo {
-    top: 4vh; }
   #content11 .row {
     display: -ms-flexbox;
     /* IE10 */
@@ -215,16 +213,17 @@ fieldset, img {
     -ms-flex-wrap: wrap;
     /* IE10 */
     flex-wrap: wrap;
-    padding: 0 4px;
-    padding-top: 200px; }
+    padding-top: 160px; }
   #content11 .column {
     -ms-flex: 25%;
     /* IE10 */
     -webkit-box-flex: 25%;
     flex: 25%;
     max-width: 25%;
-    padding: 0 4px; }
+    padding: 0 4px;
+    text-align: center; }
     #content11 .column img {
+      width: 95%;
       margin-top: 8px;
       margin-bottom: 8px;
       vertical-align: middle; }
@@ -239,13 +238,17 @@ fieldset, img {
       -ms-flex: 50%;
       -webkit-box-flex: 50%;
       flex: 50%;
-      max-width: 50%; } }
+      max-width: 50%; }
+    #content11 img {
+      width: 80% !important; } }
   @media screen and (max-width: 600px) {
     #content11 .column {
       -ms-flex: 100%;
       -webkit-box-flex: 100%;
       flex: 100%;
-      max-width: 100%; } }
+      max-width: 100%; }
+    #content11 img {
+      width: 70% !important; } }
 
 #content12 {
   position: relative;
@@ -497,7 +500,6 @@ fieldset, img {
     #content4 {
       padding-left: 8px; }
       #content4 .row {
-        padding-top: 100px;
         height: 1100px;
         font-size: 15px; }
       #content4 .column {
@@ -563,8 +565,6 @@ footer {
     font-size: 15px; }
   #content1 #titulo, #content11 #titulo, #content12 #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo {
     font-size: 40px; }
-  #content11 .row {
-    padding-top: 100px; }
   #content12 .container-fluid {
     padding-top: 100px; }
   #content21 {
