--- a/css/styles.css
+++ b/css/styles.css
@@ -267,8 +267,10 @@ fieldset, img {
     font-size: 18px;
     color: black;
     top: 200px; }
-  #content12 #titulo {
-    top: 3vh; }
+  #content12 .container-fluid {
+    padding-top: 160px; }
+  #content12 .col-lg-3 {
+    text-align: center; }
   #content12 .instaimg img {
     margin-bottom: 30px;
     -webkit-transition: .3s;
@@ -281,8 +283,6 @@ fieldset, img {
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s; }
-  #content12 .container-fluid {
-    padding-top: 200px; }
 
 #content21 {
   position: relative;
@@ -565,8 +565,8 @@ footer {
     font-size: 15px; }
   #content1 #titulo, #content11 #titulo, #content12 #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo {
     font-size: 40px; }
-  #content12 .container-fluid {
-    padding-top: 100px; }
+  #content12 img {
+    width: 80%; }
   #content21 {
     height: 185vh; }
   #content22 {
@@ -583,6 +583,8 @@ footer {
     height: 25px; }
   #content1 .arti, #content11 .arti, #content12 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
     font-size: 14px; }
+  #content12 img {
+    width: 70%; }
   #content22 {
     height: 115vh; }
   #content23 {
