--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -142,7 +142,7 @@ fieldset, img {
       overflow: hidden;
       top: 160px;
       height: 400px;
-      background-size: cover;
+      background-size: cover; //hola
   }
 
   //Computer
