--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ fieldset, img {
       font-size: 20px; }
     #content11 .column .subtitle {
       text-align: center; }
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 991.98px) {
     #content11 .column {
       -ms-flex: 50%;
       -webkit-box-flex: 50%;
@@ -241,7 +241,7 @@ fieldset, img {
       max-width: 50%; }
     #content11 img {
       width: 80% !important; } }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 575.98px) {
     #content11 .column {
       -ms-flex: 100%;
       -webkit-box-flex: 100%;
@@ -283,6 +283,12 @@ fieldset, img {
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s; }
+  @media screen and (max-width: 991.98px) {
+    #content12 .instaimg {
+      width: 50% !important; } }
+  @media screen and (max-width: 575.98px) {
+    #content12 .instaimg {
+      width: 100% !important; } }
 
 #content21 {
   position: relative;
@@ -290,7 +296,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 105vh; }
+  height: 850px; }
   #content21 #titulo {
     position: absolute;
     top: 60px;
@@ -309,6 +315,27 @@ fieldset, img {
     top: 160px;
     height: 400px;
     background-size: cover; }
+  @media (max-width: 550px) {
+    #content21 {
+      height: 900px; } }
+  @media (max-width: 393px) {
+    #content21 {
+      height: 950px; } }
+  @media (max-width: 354px) {
+    #content21 {
+      height: 1000px; } }
+  @media (max-width: 272px) {
+    #content21 {
+      height: 1050px; } }
+  @media (max-width: 256px) {
+    #content21 {
+      height: 1150px; } }
+  @media (max-width: 215px) {
+    #content21 {
+      height: 1300px; } }
+  @media (max-width: 181px) {
+    #content21 {
+      height: 1500px; } }
 
 #content22 {
   position: relative;
@@ -316,7 +343,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 90vh; }
+  height: 750px; }
   #content22 #titulo {
     position: absolute;
     top: 60px;
@@ -335,9 +362,18 @@ fieldset, img {
     top: 160px;
     height: 400px;
     background-size: cover; }
-  @media (max-width: 991.98px) {
+  @media (max-width: 354px) {
     #content22 {
-      height: 105vh; } }
+      height: 800px; } }
+  @media (max-width: 264px) {
+    #content22 {
+      height: 900px; } }
+  @media (max-width: 196px) {
+    #content22 {
+      height: 1000px; } }
+  @media (max-width: 164px) {
+    #content22 {
+      height: 1100px; } }
 
 #content23 {
   position: relative;
@@ -345,7 +381,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 105vh; }
+  height: 800px; }
   #content23 #titulo {
     position: absolute;
     top: 60px;
@@ -362,8 +398,29 @@ fieldset, img {
     position: relative;
     overflow: hidden;
     top: 160px;
-    height: 50vh;
+    height: 400px;
     background-size: cover; }
+  @media (max-width: 991.98px) {
+    #content23 {
+      height: 750px; } }
+  @media (max-width: 692px) {
+    #content23 {
+      height: 800px; } }
+  @media (max-width: 433px) {
+    #content23 {
+      height: 850px; } }
+  @media (max-width: 352px) {
+    #content23 {
+      height: 900px; } }
+  @media (max-width: 304px) {
+    #content23 {
+      height: 950px; } }
+  @media (max-width: 268px) {
+    #content23 {
+      height: 1050px; } }
+  @media (max-width: 228px) {
+    #content23 {
+      height: 1250px; } }
 
 .swiper-container p {
   color: white;
@@ -380,7 +437,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 95vh; }
+  height: 770px; }
   #content24 #titulo {
     position: absolute;
     top: 60px;
@@ -398,11 +455,26 @@ fieldset, img {
     position: relative;
     overflow: hidden;
     top: 160px;
-    height: 50vh;
+    height: 400px;
     background-size: cover; }
-  @media (max-width: 991.98px) {
+  @media screen and (max-width: 584px) {
     #content24 {
-      height: 105vh; } }
+      height: 800px; } }
+  @media screen and (max-width: 575.98px) {
+    #content24 {
+      height: 770px; } }
+  @media screen and (max-width: 387px) {
+    #content24 {
+      height: 870px; } }
+  @media screen and (max-width: 302px) {
+    #content24 {
+      height: 930px; } }
+  @media screen and (max-width: 270px) {
+    #content24 {
+      height: 1000px; } }
+  @media screen and (max-width: 218px) {
+    #content24 {
+      height: 1200px; } }
 
 #content3 {
   position: relative;
@@ -410,7 +482,7 @@ fieldset, img {
   display: inline-block;
   background-size: cover;
   width: 100%;
-  height: 100vh; }
+  height: 790px; }
   #content3 #titulo {
     position: absolute;
     top: 60px;
@@ -427,11 +499,20 @@ fieldset, img {
     position: relative;
     overflow: hidden;
     top: 160px;
-    height: 55vh;
+    height: 400px;
     background-size: cover; }
-  @media (max-width: 991.98px) {
+  @media screen and (max-width: 500px) {
     #content3 {
-      height: 105vh; } }
+      height: 850px; } }
+  @media screen and (max-width: 356px) {
+    #content3 {
+      height: 900px; } }
+  @media screen and (max-width: 279px) {
+    #content3 {
+      height: 1000px; } }
+  @media screen and (max-width: 231px) {
+    #content3 {
+      height: 1200px; } }
 
 #content4 {
   position: relative;
@@ -454,7 +535,7 @@ fieldset, img {
     color: black;
     top: 200px; }
   #content4 .arti2 {
-    padding-top: 5vh;
+    padding-top: 0;
     position: relative;
     color: black; }
   #content4 .row {
@@ -496,7 +577,7 @@ fieldset, img {
       color: #0077BB; }
     #content4 .column .fab {
       font-size: 40px; }
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 767.98px) {
     #content4 {
       padding-left: 8px; }
       #content4 .row {
@@ -515,16 +596,18 @@ fieldset, img {
         height: 360px; } }
 
 footer {
-  height: 10vh;
+  height: 100px;
   color: white;
   text-align: center; }
 
 @media (max-width: 991.98px) {
-  #content1 .arti, #content11 .arti, #content12 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+  #content1 .arti, #content11 .arti, #content12 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti, #content4 .arti {
     padding-left: 1.35rem;
     padding-right: 1.35rem;
     font-size: 16px; }
-  #content1 #titulo, #content11 #titulo, #content12 #titulo, #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo {
+  #content1 .arti2, #content11 .arti2, #content12 .arti2, #content21 .arti2, #content22 .arti2, #content23 .arti2, #content24 .arti2, #content3 .arti2, #content4 .arti2 {
+    font-size: 16px; }
+  #content1 #titulo, #content11 #titulo, #content12 #titulo, #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo, #content4 #titulo {
     font-size: 45px; }
   .pl-5 {
     padding-left: 0rem; }
@@ -561,38 +644,16 @@ footer {
     color: white; }
 
 @media (max-width: 767.98px) {
-  #content1 .arti, #content11 .arti, #content12 #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+  #content1 .arti, #content1 .arti2, #content11 .arti, #content11 .arti2, #content12 #content21 .arti, #content12 #content21 .arti2, #content22 .arti, #content22 .arti2, #content23 .arti, #content23 .arti2, #content24 .arti, #content24 .arti2, #content3 .arti, #content3 .arti2, #content4 .arti, #content4 .arti2 {
     font-size: 15px; }
-  #content1 #titulo, #content11 #titulo, #content12 #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo {
-    font-size: 40px; }
-  #content21 {
-    height: 185vh; }
-  #content22 {
-    height: 115vh; }
-  #content23 {
-    height: 135vh; }
-  #content24 {
-    height: 130vh; }
-  #content3 {
-    height: 130vh; } }
+  #content1 #titulo, #content11 #titulo, #content12 #content21 #titulo, #content22 #titulo, #content23 #titulo, #content24 #titulo, #content3 #titulo, #content4 #titulo {
+    font-size: 40px; } }
 
 @media (max-width: 575.98px) {
   #logo {
-    height: 25px; }
-  #content1 .arti, #content11 .arti, #content12 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    height: 24px; }
+  #content1 .arti, #content1 .arti2, #content11 .arti, #content11 .arti2, #content12 .arti, #content12 .arti2, #content21 .arti, #content21 .arti2, #content22 .arti, #content22 .arti2, #content23 .arti, #content23 .arti2, #content24 .arti, #content24 .arti2, #content3 .arti, #content3 .arti2 {
     font-size: 14px; }
-  #content22 {
-    height: 115vh; }
-  #content23 {
-    height: 135vh; }
-  #content24 {
-    height: 130vh; }
-  #content3 {
-    height: 125vh; }
-  #content21 {
-    height: 150vh; }
-    #content21 .arti {
-      font-size: 15px; }
   .redes {
     padding-top: 20px;
     padding-right: 1.5rem; }
